<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OnBoardingActivity">

    <ImageView
        android:id="@+id/onBoardingImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/on_boarding_image" />

    <TextView
        android:id="@+id/onBoardingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/onBoardingImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/onBoardingTitle"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/onBoardingDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/onBoardingTitle"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/onBoardingDescription"
        android:textAlignment="center" />

    <Button
        android:id="@+id/onBoardingButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/onBoardingDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#013220"
        android:text="@string/onBoardingButton" />
</RelativeLayout>