<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/login_image" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/fill_your_profile"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/loginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="5dp">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@null"
            android:hint="@string/input_name"
            android:inputType="text|textNoSuggestions" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/textInput"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#0089ED"
        android:text="@string/login" />


</RelativeLayout>